--- a/templates/advisor/advisor_courses.html
+++ b/templates/advisor/advisor_courses.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
-<title>Advisor Homepage</title>
+<title>Advisor Courses</title>
 <head>
+    {% load static %}
+    <script src="{% static 'advisor.js' %}" type="text/javascript"></script>
     <style>
         #topBlackBar {
             border-top: 50px solid #000;
         }
     </style>
-</head>
-<body>
-<div id="topBlackBar"/>
-</body>
-</html>
-<html lang="en">
-<head>
     <meta charset="UTF-8">
-    <title>Advisor Search</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
+
 <body>
+<div id="topBlackBar"/>
+
 <div class="container">
-    <div class="row mt-2">
+    <div class="row mt-3">
         <div class="col-2">
             <div class="fw-bolder">Advisor: {{data.advisor_name}}</div>
             <div class="fw-bolder">ID: {{data.advisor_id}}</div>
@@ -29,26 +27,24 @@
                 <a href="{% url 'advisor_statics' advisor_id=data.advisor_id %}" class="list-group-item">Statistics</a>
                 <a href="{% url 'advisor_requests' advisor_id=data.advisor_id %}" class="list-group-item">Requests</a>
                 <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item">Students</a>
-                <a href="{% url 'advisor_courses' advisor_id=data.advisor_id %}" class="list-group-item">Courses</a>
-
+                <a href="{% url 'advisor_courses' advisor_id=data.advisor_id %}" class="list-group-item active">Courses</a>
                 <a href="{% url 'advisor_profile' employee_id=data.advisor_id %}" class="list-group-item">Profile</a>
-                <a href="{% url 'advisor_search' advisor_id=data.advisor_id %}" class="list-group-item active">Search</a>
+                <a href="{% url 'advisor_search' advisor_id=data.advisor_id %}" class="list-group-item">Search</a>
             </div>
         </div>
         <div class="col-10">
             <div class="input-group">
-                <input id="search-nuid"type="search" class="form-control rounded" placeholder="Search with student nuid..."
+                <input id="search-course-id"type="search" class="form-control rounded" placeholder="Search course with id here..."
                        aria-label="Search" aria-describedby="search-addon"/>
-                <button type="button" class="btn btn-outline-primary" onclick="setGetParameter()">search</button>
+                <button type="button" class="btn btn-outline-primary" onclick="getCourseSearchDetail()">search</button>
             </div>
         </div>
     </div>
 </div>
-
 <script>
-    function setGetParameter() {
-        searchWord = document.getElementById('search-nuid').value;
-        window.location.href = "{% url 'search_student_details' %}" + "?advisor=" + {{data.advisor_id}} + "&nuid=" + searchWord;
+    function getCourseSearchDetail() {
+        course_id = document.getElementById("search-course-id").value;
+        window.location.href = "{% url 'search_course_details' %}" + "?advisor_id=" + {{data.advisor_id}} + "&course_id=" + course_id;
     }
 </script>
 </body>
