--- a/templates/advisor/advisor_profile.html
+++ b/templates/advisor/advisor_profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Advisor Homepage</title>
+<title>Advisor Profile</title>
 <head>
     {% load static %}
     <script src="{% static 'advisor.js' %}"  type="text/javascript"></script>
@@ -10,7 +10,6 @@
         }
     </style>
     <meta charset="UTF-8">
-    <title>Advisor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -24,8 +23,8 @@
             <div class="list-group">
                 <a href="{% url 'advisor_statics' advisor_id=data.employee_id %}" class="list-group-item">Statistics</a>
                 <a href="{% url 'advisor_requests' advisor_id=data.employee_id %}" class="list-group-item">Requests</a>
-                <a href="{% url 'advisor_students' advisor_id=data.employee_id %}" class="list-group-item">My
-                    Students</a>
+                <a href="{% url 'advisor_students' advisor_id=data.employee_id %}" class="list-group-item">Students</a>
+                <a href="{% url 'advisor_courses' advisor_id=data.employee_id %}" class="list-group-item">Courses</a>
                 <a href="{% url 'advisor_profile' employee_id=data.employee_id %}" class="list-group-item active">Profile</a>
                 <a href="{% url 'advisor_search' advisor_id=data.employee_id %}" class="list-group-item">Search</a>
             </div>
@@ -39,6 +38,14 @@
                 <lable for="advisor-id" class="col-2 col-form-label mb-2">Employee ID</lable>
                 <div class="col-10">
                     <div id="advisor-id" class=" mb-2">{{data.employee_id}}</div>
+                </div>
+                <lable for="advisor-department" class="col-2 col-form-label mb-2">Department</lable>
+                <div class="col-10">
+                    <div id="advisor-department" class=" mb-2">{{data.department_id}}  {{data.department_name}}</div>
+                </div>
+                <lable for="advisor-address" class="col-2 col-form-label mb-2">Department Address</lable>
+                <div class="col-10">
+                    <div id="advisor-address" class=" mb-2">{{data.office_addr}}</div>
                 </div>
                 <lable for="advisor-email" class="col-2 col-form-label mb-2">Email</lable>
                 <div class="col-10">
