--- a/templates/advisor/advisor_requests.html
+++ b/templates/advisor/advisor_requests.html
@@ -9,7 +9,7 @@
         }
     </style>
     <meta charset="UTF-8">
-    <title>Advisor</title>
+    <title>Advisor Requests</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -23,8 +23,8 @@
             <div class="list-group">
                 <a href="{% url 'advisor_statics' advisor_id=data.advisor_id %}" class="list-group-item">Statistics</a>
                 <a href="{% url 'advisor_requests' advisor_id=data.advisor_id %}" class="list-group-item active">Requests</a>
-                <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item">My
-                    Students</a>
+                <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item">Students</a>
+                <a href="{% url 'advisor_courses' advisor_id=data.advisor_id %}" class="list-group-item">Courses</a>
                 <a href="{% url 'advisor_profile' employee_id=data.advisor_id %}" class="list-group-item">Profile</a>
                 <a href="{% url 'advisor_search' advisor_id=data.advisor_id %}" class="list-group-item">Search</a>
             </div>
