--- a/templates/advisor/advisor_search_details.html
+++ b/templates/advisor/advisor_search_details.html
@@ -4,7 +4,7 @@
     {% load static %}
     <script src="{% static 'advisor.js' %}"  type="text/javascript"></script>
     <meta charset="UTF-8">
-    <title>Advisor</title>
+    <title>Advisor Search</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style>
@@ -24,10 +24,10 @@
             <div class="list-group">
                 <a href="{% url 'advisor_statics' advisor_id=data.advisor_id %}" class="list-group-item">Statistics</a>
                 <a href="{% url 'advisor_requests' advisor_id=data.advisor_id %}" class="list-group-item">Requests</a>
-                <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item">My
-                    Students</a>
-                <a href="{% url 'advisor_profile' employee_id=data.advisor_id %}" class="list-group-item">My Profile</a>
-                <a href="{% url 'advisor_search' advisor_id=data.advisor_id %}" class="list-group-item">Search</a>
+                <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item">Students</a>
+                <a href="{% url 'advisor_courses' advisor_id=data.advisor_id %}" class="list-group-item">Courses</a>
+                <a href="{% url 'advisor_profile' employee_id=data.advisor_id %}" class="list-group-item">Profile</a>
+                <a href="{% url 'advisor_search' advisor_id=data.advisor_id %}" class="list-group-item active">Search</a>
             </div>
         </div>
         <div class="col-10">
@@ -42,6 +42,7 @@
                 <p>Semester hour: {{data.student_hours}}</p>
                 <p>GPA: {{data.student_grade}}</p>
                 <p>Student email: {{data.student_email}}</p>
+                <p>Student Advisor: {{data.stu_advisor_id}}  {{data.stu_advisor_name}}</p>
                 <p>Student campus: {{data.student_campus}}</p>
                 <p>Student college: {{data.student_college}}</p>
                 <p>Student department: {{data.student_department}}</p>
@@ -100,7 +101,7 @@
 <script>
     function setGetParameter() {
         searchWord = document.getElementById('search-nuid').value;
-        window.location.href = "{% url 'search_details' %}" + "?advisor=" + {{data.advisor_id}} + "&search=" + searchWord;
+        window.location.href = "{% url 'search_student_details' %}" + "?advisor=" + {{data.advisor_id}} + "&nuid=" + searchWord;
     }
 </script>
 </body>
