Update frontend, fix drop course bug

--- a/templates/student/course_registration.html
+++ b/templates/student/course_registration.html
@@ -71,7 +71,7 @@
                 <form action="" method="POST"> {% csrf_token %}
                     <h4 class="border border-primary rounded p-2">Course Registration</h4>
                     <input type="text" class="field" placeholder="Couese Number" name="course_number">
-                    <button type="submit" class="btn">Register</button>
+                    <button type="submit" class="btn" style="background-color: dodgerblue">Register</button>
                 </form>
             </div>
     </div>
