--- a/templates/student/drop_course.html
+++ b/templates/student/drop_course.html
@@ -41,18 +41,29 @@
             </div>
         </div>
         <div class="col-10">
-            <div class="input-group">
-                <form action="" method="POST"> {%  csrf_token %}
-                    <h4 class="border border-primary rounded p-2">Course Currently Taking Or Pending</h4>
-                    {% for c in data.course_taking %}
-                    <p>{{c}}</p>
-                    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-                    {% endfor %}
-                    <h4 class="border border-primary rounded p-2">Drop Course</h4>
-                    <input type="text" class="field" placeholder="Couese Number" name="course_number">
-                    <button type="submit" class="btn">Drop</button>
-                </form>
-            </div>
+            <h4 class="border border-primary rounded p-2">Course Currently Taking Or Pending</h4>
+            <div class="row">
+                <div class="col-md-4"><b> Course </b></div>
+                <div class="col-md-4"><b> Name </b></div>
+                <div class="col-md-4"><b> Status </b></div>
+                </div>
+            <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+            {% for c in data.course_taking %}
+                <div class="row">
+                    <div class="col-md-4"><font size="1">{{c.course_num}} </font></div>
+                    <div class="col-md-4"><font size="1">{{c.course_name}} </font></div>
+                    <div class="col-md-4"><font size="1">{{c.status}} </font></div>
+                </div>
+                <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+            {% endfor %}
+        <div class="col-10">
+            <form action="" method="POST"> {%  csrf_token %}
+                <h4 class="border border-primary rounded p-2">Drop Course</h4>
+                <input type="text" class="field" placeholder="Couese Number" name="course_number">
+                <button type="submit" class="btn" style="background-color: mediumvioletred">Drop</button>
+            </form>
+        </div>
+        </div>
     </div>
 </div>
 
